--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.3.0",
+    "update": "^0.7.4",
     "vue": "^2.5.13",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.0"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^2.11.1"
   }
 }
