testing TurbolinksAdapter: functionality test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "update": "^0.7.4",
     "vue": "^2.5.13",
     "vue-loader": "^14.1.1",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "vue-turbolinks": "^2.0.1"
   },
   "devDependencies": {
     "webpack-cli": "^2.0.10",
